Added new resources

--- a/_docs/offensive-security/C2.md
+++ b/_docs/offensive-security/C2.md
@@ -17,6 +17,8 @@ Command and control systems.
 | [Cobalt Strike](https://www.cobaltstrike.com/) | Software for Adversary Simulation and Red Team Operations. | ![paid-product](../../assets/img/icons/payment.png) ![register-profile](../../assets/img/icons/registration.png) |
 | [Covenant](https://github.com/cobbr/Covenant) | Covenant is a collaborative .NET C2 framework for red teamers. | ![last-commit](https://img.shields.io/github/last-commit/cobbr/Covenant?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
 | [Merlin](https://github.com/Ne0nd0g/merlin) | Merlin is a cross-platform post-exploitation HTTP/2 Command & Control server and agent written in golang. | ![last-commit](https://img.shields.io/github/last-commit/Ne0nd0g/merlin?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
+| [phpsploit](https://github.com/nil0x42/phpsploit) | Full-featured C2 framework which silently persists on webserver with a single-line PHP backdoor. | ![last-commit](https://img.shields.io/github/last-commit/nil0x42/phpsploit?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
 | [PoshC2](https://github.com/nettitude/PoshC2) | A proxy aware C2 framework used to aid red teamers with post-exploitation and lateral movement. | ![last-commit](https://img.shields.io/github/last-commit/nettitude/PoshC2?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
+| [Pupy](https://github.com/n1nj4sec/pupy/) | Cross-platform C2 and post-exploitation framework written in python and C. | ![last-commit](https://img.shields.io/github/last-commit/n1nj4sec/pupy?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
 | [SILENTTRINITY](https://github.com/byt3bl33d3r/SILENTTRINITY) | An asynchronous, collaborative post-exploitation agent powered by Python and .NET's DLR. | ![last-commit](https://img.shields.io/github/last-commit/byt3bl33d3r/SILENTTRINITY?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
 | [TrevorC2](https://github.com/trustedsec/trevorc2) | TrevorC2 is a legitimate website (browsable) that tunnels client/server communications for covert command execution. | ![last-commit](https://img.shields.io/github/last-commit/trustedsec/trevorc2?color=a65f5f&style=flat-square) ![opensource](../../assets/img/icons/open-source.png) |
