--- a/offensive-security/C2.md
+++ b/offensive-security/C2.md
@@ -15,6 +15,7 @@ Command and control systems.
 * [Cobalt Strike](https://www.cobaltstrike.com/) - Software for Adversary Simulation and Red Team Operations. 
 * [Covenant](https://github.com/cobbr/Covenant) - Covenant is a collaborative .NET C2 framework for red teamers. ![last-commit](https://img.shields.io/github/last-commit/cobbr/Covenant?style=flat)
 * [Merlin](https://github.com/Ne0nd0g/merlin) - Merlin is a cross-platform post-exploitation HTTP/2 Command & Control server and agent written in golang. ![last-commit](https://img.shields.io/github/last-commit/Ne0nd0g/merlin?style=flat)
+* [NightHawk](https://www.mdsec.co.uk/nighthawk/) - Built with operational security in mind, Nighthawk is a highly malleable implant designed to circumvent and evade the modern security controls often seen in mature, highly monitored environments.
 * [phpsploit](https://github.com/nil0x42/phpsploit) - Full-featured C2 framework which silently persists on webserver with a single-line PHP backdoor. ![last-commit](https://img.shields.io/github/last-commit/nil0x42/phpsploit?style=flat)
 * [PoshC2](https://github.com/nettitude/PoshC2) - A proxy aware C2 framework used to aid red teamers with post-exploitation and lateral movement. ![last-commit](https://img.shields.io/github/last-commit/nettitude/PoshC2?style=flat)
 * [Pupy](https://github.com/n1nj4sec/pupy/) - Cross-platform C2 and post-exploitation framework written in python and C. ![last-commit](https://img.shields.io/github/last-commit/n1nj4sec/pupy?style=flat)
